@startuml

skinparam linetype ortho
set namespaceSeparator none
hide circle

package engine {
    abstract class Actor <<abstract>>
    abstract class WeaponItem <<abstract>>
    interface Action <<interface>>
}

package game {

    package enemies {
        abstract class Enemy <<abstract>>
        class HeavySkeletalSwordsman
        class LoneWolf
        class GiantCrab
    }

    package traders {
        abstract class Trader <<abstract>>
        class MerchantKale
    }

    package actions {
        class PurchaseAction
        class DeathAction
        class AttackAction
        class ConsumeAction
        class PurchaseAction
        class SellAction
    }

    package items {
        interface Consumables <<interface>>

        class Rune
        class Grossmesser
        class Club
    }

    package utils {
        class RandomNumberGenerator
    }

    class Player

    class Application
}




    ' ========== Generalisations (Parent/Child) ==========

    MerchantKale --|> Trader

    Trader --|> Actor

    HeavySkeletalSwordsman -[#blue]-|> Enemy
    LoneWolf -[#blue]-|> Enemy
    GiantCrab -[#blue]-|> Enemy

    Club -[#green]-|> WeaponItem
    Grossmesser -[#green]-|> WeaponItem

    PurchaseAction --|> Action
    SellAction --|> Action






    ' ========== Realisations (Interfaces) ==========

    Rune ..|> Consumables






    ' ========== Associations ==========

    MerchantKale "1" --> "0..*" Club : transacts
    MerchantKale "1" --> "0..*" Grossmesser : buys

    DeathAction "0..*" ---> "1" Rune : drops




    ' ========== Dependencies ==========

    Application ..> MerchantKale

    AttackAction ..> DeathAction

    RandomNumberGenerator ..> HeavySkeletalSwordsman
    RandomNumberGenerator ..> GiantCrab
    RandomNumberGenerator ..> LoneWolf

    Rune ..> Player

    MerchantKale ..> Player
    MerchantKale ..> PurchaseAction
    MerchantKale ..> SellAction

    PurchaseAction ..> WeaponItem
    SellAction ..> WeaponItem
    SellAction ..> Player
    PurchaseAction ..> Player


}

@enduml
